idea/testData/checker/regression/ClassDeclarationAsExpression2.fir.kt
fun g() = 1 <error descr="[OVERLOAD_RESOLUTION_AMBIGUITY] Overload resolution ambiguity between candidates: [kotlin/Int.compareTo, kotlin/Int.compareTo, kotlin/Int.compareTo, ...]"><</error> <error descr="[EXPRESSION_REQUIRED] ">class A</error>
